Progress commit while working on the Data Manager class.