@@ -118,7 +118,7 @@
 
     <build>
         <plugins>
-            <!-- Compiler plugin with Java 21 and preview features -->
+            <!-- Compiler plugin with Java 21 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -126,9 +126,6 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
